--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+
 <!-- 
 <head>
   <meta charset="utf-8">
@@ -7,39 +8,40 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head> -->
 <div id="body">
-  <div class="login">
-    <!-- Logo account -->
-    <div class="account-icon">
-      <img src="/images/login_logo.png" alt="Login Logo">
+    <div class="login">
+      <!-- Logo account -->
+      <div class="account-icon">
+        <img src="/images/login_logo.png" alt="Login Logo">
+      </div>
+  
+      <!-- Login form -->
+      <form class="login-form" >
+        <div class="form-group">
+          <div class="input-container">
+            <input type="text" id="username" name="username" [(ngModel)]="username" placeholder="Tên đăng nhập">
+            <i class="fas fa-user input-icon"></i>
+          </div>
+        </div>
+  
+        <div class="form-group">
+          <div class="input-container">
+            <input type="password" id="password" name="password" [(ngModel)]="password" placeholder="Mật khẩu">
+            <i class="fas fa-lock input-icon"></i>
+          </div>
+        </div>
+  
+        <div class="checkbox-group">
+          <input type="checkbox" id="teacher">
+          <label for="teacher">Bạn là giảng viên?</label>
+        </div>
+  
+        <button type="button" class="login-button" (click)="submit()">Đăng nhập</button>
+  
+        <div class="form-links">
+          <a href="#" class="forgot-password">Quên mật khẩu?</a>
+          <span>Bạn chưa có tài khoản? <a href="#" class="register-link">Đăng kí ngay!</a></span>
+        </div>
+      </form>
     </div>
-
-    <!-- Login form -->
-    <form class="login-form">
-      <div class="form-group">
-        <div class="input-container">
-          <input type="text" id="username" placeholder="Tên đăng nhập">
-          <i class="fas fa-user input-icon"></i>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="input-container">
-          <input type="password" id="password" placeholder="Mật khẩu">
-          <i class="fas fa-lock input-icon"></i>
-        </div>
-      </div>
-
-      <div class="checkbox-group">
-        <input type="checkbox" id="teacher">
-        <label for="teacher">Bạn là giảng viên?</label>
-      </div>
-
-      <button type="button" class="login-button">Đăng nhập</button>
-
-      <div class="form-links">
-        <a href="#" class="forgot-password">Quên mật khẩu?</a>
-        <span>Bạn chưa có tài khoản? <a href="#" class="register-link">Đăng kí ngay!</a></span>
-      </div>
-    </form>
   </div>
-</div>
+  
