--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-
-<div class="app-container">
- 
-    <app-login></app-login>
-  
+<app-header *ngIf="showLayout"></app-header>
+<div class="main-container ">
+    <app-sidebar *ngIf="showLayout"></app-sidebar>
+    <router-outlet></router-outlet>
 </div>
-
