xong header và sidebar

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,7 +1,9 @@
 .dashboard {
     flex: 1;
     padding: 1.5rem;
-    background-color: #f8fafc;
+    margin-left: 5rem;
+    margin-top: 100px;
+    
 
     .cards-grid {
         display: grid;
