--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,28 +1,21 @@
-<nav class="sidebar">
+<nav class="sidebar" 
+     [class.expanded]="isExpanded" 
+     (mouseover)="onMouseEnter()" 
+     (mouseleave)="onMouseLeave()">
+
     <div class="profile">
         <img alt="User profile" 
              src="https://storage.googleapis.com/a1aa/image/hiCfLbekyfRdCR6xjo6vwuaQ1Cp4oSFKFAKJvcLm6jI.jpg"/>
     </div>
-    
-    <div class="menu-items">
-        <div class="menu-item active">
-            <i class="fas fa-tachometer-alt"></i>
-        </div>
-        <div class="menu-item">
-            <i class="fas fa-users"></i>
-        </div>
-        <div class="menu-item">
-            <i class="fas fa-question-circle"></i>
-        </div>
-        <div class="menu-item">
-            <i class="fas fa-file-alt"></i>
-        </div>
-        <div class="menu-item">
-            <i class="fas fa-trophy"></i>
-        </div>
-    </div>
 
-    <div class="logout">
-        <i class="fas fa-sign-out-alt"></i>
+    <div class="menu-items">
+        <div class="menu-item" 
+        *ngFor="let item of menuItems"
+        [ngStyle]="{'border-left': isExpanded ? '5px solid ' + item.color : 'none'}"
+        (click)="navigateTo(item.route)"
+        >
+        <i class="fas {{ item.icon }}" [ngStyle]="{'color': item.color}"></i>
+            <span class="menu-label" *ngIf="isExpanded">{{ item.label }}</span>
+        </div>
     </div>
 </nav>
