--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,7 +1,7 @@
 .header {
     padding: 1rem;
-    width: 112rem;
-    margin-left: auto; 
+    width:  92%;
+    margin-left: auto;
     margin-bottom: 1.5rem;
     border-radius: 8px;
     font-size: 1.5rem;
