--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header *ngIf="showLayout"></app-header>
 <div class="main-container ">
     <app-sidebar *ngIf="showLayout"></app-sidebar>
+    <app-tooltip></app-tooltip>
     <router-outlet></router-outlet>
 </div>
