--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,6 @@
 .header {
-    padding: 1rem;
-    width:  92%;
+    padding: 1.5rem;
+    width:  93%;
     margin-left: auto;
     margin-bottom: 1.5rem;
     border-radius: 8px;
@@ -10,6 +10,6 @@
     position: fixed;
     z-index: 1;
     right: 0;
-    top: 0;
+    top: 2rem;
     background: linear-gradient(to left, #F76AC2, #3EDBFF);
 }
