Add font-family to various components and adjust header positioning

--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -12,6 +12,7 @@
     width: 5rem;
     z-index: 2;
     transition: width 0.3s ease;
+    font-family: Helvetica, Arial, Tahoma, sans-serif;
 
     &.expanded {
         width: 15rem; /* Khi mở rộng */
