--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -3,6 +3,7 @@
     padding: 1.5rem;
     margin-left: 5rem;
     margin-top: 100px;
+    font-family: Helvetica, Arial, Tahoma, sans-serif;
     
 
     .cards-grid {
