--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,6 @@
 .header {
     padding: 1.5rem;
+    font-family: Helvetica, Arial, Tahoma, sans-serif;
     width:  93%;
     margin-left: auto;
     margin-bottom: 1.5rem;
@@ -10,6 +11,6 @@
     position: fixed;
     z-index: 1;
     right: 0;
-    top: 2rem;
+    top: 0.8rem;
     background: linear-gradient(to left, #F76AC2, #3EDBFF);
 }
