--- a/src/app/hocsinh/hocsinh.component.scss
+++ b/src/app/hocsinh/hocsinh.component.scss
@@ -51,6 +51,7 @@
     gap: 0.5rem;
     cursor: pointer;
     margin-bottom: 0;
+    width: 8rem;
     
 }
 
@@ -59,11 +60,13 @@
 }
 
 .table-container {
-    width: 100%;
+    width: 80%;
     background: white;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     overflow: hidden;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 table {
@@ -79,7 +82,7 @@ thead tr {
 
 th,
 td {
-    padding: 1rem;
+    padding: 2rem;
     border-bottom: 1px solid #E5E7EB;
     text-align: center;
 }
@@ -105,90 +108,5 @@ button {
         transform: scale(1.1);
        // box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
     }
-    /* From Uiverse.io by catraco */ 
-    .heart-container {
-        --heart-color: rgb(255, 91, 137);
-        position: relative;
-        width: 20px;
-        height: 20px;
-        transition: .3s;
-    }
     
-    .heart-container .checkbox {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        opacity: 0;
-        z-index: 20;
-        cursor: pointer;
-    }
-    
-    .heart-container .svg-container {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    
-    .heart-container .svg-outline,
-            .heart-container .svg-filled {
-        fill: var(--heart-color);
-        position: absolute;
-    }
-    
-    .heart-container .svg-filled {
-        animation: keyframes-svg-filled 1s;
-        display: none;
-    }
-    
-    .heart-container .svg-celebrate {
-        position: absolute;
-        animation: keyframes-svg-celebrate .5s;
-        animation-fill-mode: forwards;
-        display: none;
-        stroke: var(--heart-color);
-        fill: var(--heart-color);
-        stroke-width: 2px;
-    }
-    
-    .heart-container .checkbox:checked~.svg-container .svg-filled {
-        display: block
-    }
-    
-    .heart-container .checkbox:checked~.svg-container .svg-celebrate {
-        display: block
-    }
-    
-    @keyframes keyframes-svg-filled {
-        0% {
-        transform: scale(0);
-        }
-    
-        25% {
-        transform: scale(1.2);
-        }
-    
-        50% {
-        transform: scale(1);
-        filter: brightness(1.5);
-        }
-    }
-    
-    @keyframes keyframes-svg-celebrate {
-        0% {
-        transform: scale(0);
-        }
-    
-        50% {
-        opacity: 1;
-        filter: brightness(1.5);
-        }
-    
-        100% {
-        transform: scale(1.4);
-        opacity: 0;
-        display: none;
-        }
-    }
 }
