--- a/src/app/hocsinh/hocsinh.component.scss
+++ b/src/app/hocsinh/hocsinh.component.scss
@@ -22,17 +22,20 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     margin-bottom: 1rem;
     width: 400px;
+    margin-left: 10%;
+  
 }
 
 .search-box input {
     flex: 1;
     border: none;
     outline: none;
-    padding: 0.5rem;
+    padding: 1rem;
     border-radius: 999px;
 }
 
 .search-box button {
+    margin-left: 9rem;
     background: none;
     border: none;
     color: #6D28D9;
@@ -52,13 +55,21 @@
     cursor: pointer;
     margin-bottom: 0;
     width: 8rem;
-    
+    margin-right: 10%;
+    position: relative;
 }
 
 .filter-btn i {
     font-size: 1rem;
 }
-
+.action{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   // margin-bottom: 1rem;
+    margin-left: 10%;
+    margin-right: 10%;  
+}
 .table-container {
     width: 80%;
     background: white;
@@ -85,6 +96,7 @@ td {
     padding: 2rem;
     border-bottom: 1px solid #E5E7EB;
     text-align: center;
+
 }
 
 tbody tr:nth-child(even) {
@@ -101,7 +113,8 @@ button {
     font-size: 1rem;
     width: 100%;
     height: 100%;
-    display: flex;
+   
+    text-align: center;
     justify-content: center;
     align-items: center;
     &:hover {
